# OpenTender

./: Cargo.toml  README.md
backend/: .env  Cargo.toml
backend/src/: config.rs  main.rs
backend/src/models/: types.rs
backend/src/routes/: bid.rs  mod.rs  tender.rs
backend/src/services/: encryption.rs  mod.rs  stellar.rs
contracts/hello-world/: Cargo.toml
contracts/hello-world/src/: lib.rs  test.rs
contracts/hello-world/test_snapshots/test/: test_complete_bidding_flow.1.json  test_create_and_get_tender.1.json  test_create_tender.1.json  test_initialize.1.json
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: CreateTender.jsx  Navbar.jsx  RevealBid.jsx  SubmitBid.jsx  TenderDetail.jsx  TenderList.jsx
frontend/src/services/: api.js  encryption.js  stellar.js
frontend/src/utils/: helpers.js
