[package]
name = "opentender-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
stellar_sdk = "0.1.4"
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
actix-rt = "2.9"